Cleaned up profile screen
Info can't be changed since user profiles can't be made, but screen's more presentable now

--- a/app/src/main/res/layout/activity_profile_screen.xml
+++ b/app/src/main/res/layout/activity_profile_screen.xml
@@ -22,51 +22,230 @@
             app:layout_constraintBottom_toBottomOf="parent" android:layout_marginBottom="654dp"
             app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="31dp"
             android:layout_marginEnd="283dp" app:layout_constraintEnd_toEndOf="parent"/>
+
     <Button
-            android:text="Settings"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content" android:id="@+id/settings_button"
-            android:fontFamily="@font/amarante"
-            app:layout_constraintTop_toTopOf="parent" android:layout_marginTop="435dp"
-            app:layout_constraintBottom_toBottomOf="parent" android:layout_marginBottom="248dp"
-            app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="160dp"
-            android:layout_marginEnd="153dp" app:layout_constraintEnd_toEndOf="parent"/>
+        android:id="@+id/settings_button"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="10dp"
+        android:layout_marginTop="435dp"
+        android:layout_marginEnd="250dp"
+        android:layout_marginBottom="248dp"
+        android:fontFamily="@font/amarante"
+        android:text="Settings"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
+
     <TextView
-            android:text="#firstname"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content" android:id="@+id/textView7"
-            android:fontFamily="@font/amarante" android:textSize="20sp"
-            app:layout_constraintTop_toTopOf="parent" android:layout_marginTop="51dp"
-            app:layout_constraintBottom_toBottomOf="parent" android:layout_marginBottom="654dp"
-            app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="267dp"
-            android:layout_marginEnd="45dp" app:layout_constraintEnd_toEndOf="parent"/>
+        android:id="@+id/textView7"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="45dp"
+        android:layout_marginTop="51dp"
+        android:layout_marginEnd="45dp"
+        android:layout_marginBottom="570dp"
+        android:fontFamily="@font/amarante"
+
+        android:text="First Name: "
+        android:textSize="20sp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
+
     <TextView
-            android:text="#lastname"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content" android:id="@+id/textView8"
-            android:fontFamily="@font/amarante" android:textSize="20sp"
-            app:layout_constraintTop_toTopOf="parent" android:layout_marginTop="102dp"
-            app:layout_constraintBottom_toBottomOf="parent" android:layout_marginBottom="603dp"
-            app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="267dp"
-            android:layout_marginEnd="50dp" app:layout_constraintEnd_toEndOf="parent"/>
+        android:id="@+id/profile_firstName"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="205dp"
+        android:layout_marginTop="51dp"
+        android:layout_marginEnd="45dp"
+        android:layout_marginBottom="570dp"
+        android:fontFamily="@font/amarante"
+        android:text="John"
+        android:textSize="20sp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
+
     <TextView
-            android:text="#address"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content" android:id="@+id/textView9"
-            android:fontFamily="@font/amarante" android:textSize="20sp"
-            app:layout_constraintTop_toTopOf="parent" android:layout_marginTop="169dp"
-            app:layout_constraintBottom_toBottomOf="parent" android:layout_marginBottom="536dp"
-            app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="267dp"
-            android:layout_marginEnd="64dp" app:layout_constraintEnd_toEndOf="parent"/>
+        android:id="@+id/textView8"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="50dp"
+        android:layout_marginTop="102dp"
+        android:layout_marginEnd="50dp"
+        android:layout_marginBottom="535dp"
+        android:fontFamily="@font/amarante"
+        android:text="Last Name: "
+        android:textSize="20sp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
+
     <TextView
-            android:text="#personal_info"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content" android:id="@+id/textView10"
-            android:fontFamily="@font/amarante" android:textSize="24sp"
-            app:layout_constraintTop_toTopOf="parent" android:layout_marginTop="340dp"
-            app:layout_constraintBottom_toBottomOf="parent" android:layout_marginBottom="361dp"
-            app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="128dp"
-            android:layout_marginEnd="121dp" app:layout_constraintEnd_toEndOf="parent"/>
+        android:id="@+id/profile_lastName"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="220dp"
+        android:layout_marginTop="102dp"
+        android:layout_marginEnd="50dp"
+        android:layout_marginBottom="535dp"
+        android:fontFamily="@font/amarante"
+        android:text="Brown"
+        android:textSize="20sp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
+
+    <TextView
+        android:id="@+id/textView9"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="55dp"
+        android:layout_marginTop="195dp"
+        android:layout_marginEnd="64dp"
+        android:layout_marginBottom="536dp"
+        android:fontFamily="@font/amarante"
+        android:text="City/State: "
+        android:textSize="20sp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
+
+    <TextView
+        android:id="@+id/profile_cityState"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="270dp"
+        android:layout_marginTop="195dp"
+        android:layout_marginEnd="64dp"
+        android:layout_marginBottom="536dp"
+        android:fontFamily="@font/amarante"
+        android:text="Lakeland/FL"
+        android:textSize="20sp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
+
+    <TextView
+        android:id="@+id/textView10"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="10dp"
+        android:layout_marginTop="200dp"
+        android:layout_marginEnd="250dp"
+        android:layout_marginBottom="370dp"
+        android:fontFamily="@font/amarante"
+        android:text="Personal Info:"
+        android:textSize="24sp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
+
+    <TextView
+        android:id="@+id/textView11"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="10dp"
+        android:layout_marginTop="270dp"
+        android:layout_marginEnd="260dp"
+        android:layout_marginBottom="361dp"
+        android:fontFamily="@font/amarante"
+        android:text="Phone Number:"
+        android:textSize="20sp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
+
+    <TextView
+        android:id="@+id/profile_phoneNumber"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="150dp"
+        android:layout_marginTop="270dp"
+        android:layout_marginEnd="130dp"
+        android:layout_marginBottom="361dp"
+        android:fontFamily="@font/amarante"
+        android:text="123-456-7890"
+        android:textSize="20sp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
+
+    <TextView
+        android:id="@+id/textView12"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="10dp"
+        android:layout_marginTop="270dp"
+        android:layout_marginEnd="345dp"
+        android:layout_marginBottom="290dp"
+        android:fontFamily="@font/amarante"
+        android:text="Email:"
+        android:textSize="20sp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
+
+    <TextView
+        android:id="@+id/profile_email"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="70dp"
+        android:layout_marginTop="270dp"
+        android:layout_marginEnd="130dp"
+        android:layout_marginBottom="290dp"
+        android:fontFamily="@font/amarante"
+        android:text="johnbrown@gmail.com"
+        android:textSize="20sp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
+
+    <TextView
+        android:id="@+id/textView13"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="10dp"
+        android:layout_marginTop="270dp"
+        android:layout_marginEnd="320dp"
+        android:layout_marginBottom="220dp"
+        android:fontFamily="@font/amarante"
+        android:text="Address:"
+        android:textSize="20sp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
+
+    <TextView
+        android:id="@+id/profile_address"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="75dp"
+        android:layout_marginTop="270dp"
+        android:layout_marginEnd="130dp"
+        android:layout_marginBottom="220dp"
+        android:fontFamily="@font/amarante"
+        android:text="1234 Tompkins Rd"
+        android:textSize="20sp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
     <ImageView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content" tools:srcCompat="@tools:sample/avatars" android:id="@+id/imageView"
