Most Recent Update

--- a/app/src/main/res/layout/list_item_cart.xml
+++ b/app/src/main/res/layout/list_item_cart.xml
@@ -24,7 +24,7 @@
         app:layout_constraintEnd_toEndOf="parent" />
 
     <TextView
-        android:id="@+id/itemLocationTextView"
+        android:id="@+id/storeNameTextView"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:text="Location: Store"
